--- a/profil.html
+++ b/profil.html
@@ -66,7 +66,7 @@
     .btnX:hover{background: rgba(255,255,255,.10); border-color: rgba(255,255,255,.22)}
     .btnX:active{transform: translateY(1px)}
 
-    /* Grid layout : Fiche à gauche, Niveaux à droite sur desktop */
+    /* Grid layout : Fiche à gauche, Niveaux à droite */
     .grid{
       display:grid; 
       grid-template-columns: 1.4fr 0.6fr; 
@@ -310,7 +310,6 @@
       1: {
         title: "Type 1 – Le Perfectionniste",
         sub: "Le Réformateur, l'Idéaliste",
-        levelsIntro: "Du discernement sage à la punition obsessionnelle.",
         levels: { 1: "Sagesse et acceptation : Abandonne le jugement, accepte la réalité telle qu'elle est avec sérénité.", 2: "Raison et évaluation : Guidé par la conscience, raisonnable et modéré.", 3: "Responsabilité : Hautement éthique, discipliné, enseigne par l'exemple.", 4: "Obligation : Devient critique, craint l'erreur, travaille dur par devoir.", 5: "Ordre et contrôle : Tendu, organisé à l'extrême, peur d'être pris en défaut.", 6: "Jugement : Critique envers les autres, moralisateur, jamais satisfait.", 7: "Intolérance : Dogmatique, inflexible, ne supporte aucune déviation.", 8: "Obsession : Pensées compulsives sur l'imperfection, actions contradictoires.", 9: "Punition : Condamnation sévère de soi et des autres, risques destructeurs." },
         sections: [
           { t: "Présentation", b: "<p>Le Type 1 est une personnalité <b>idéaliste et rationnelle</b>, animée par des principes solides. Il a le sentiment d'avoir une mission : améliorer le monde et corriger les erreurs.</p><ul><li><b>Désir fondamental :</b> Être intègre, bon et équilibré.</li><li><b>Peur fondamentale :</b> Être mauvais, défectueux, corrompu ou imparfait.</li><li><b>Message du Surmoi :</b> Tu es bien si tu fais ce qui est juste.</li></ul>" },
@@ -323,8 +322,7 @@
       2: {
         title: "Type 2 – L'Altruiste",
         sub: "L'Aidant, le Donneur",
-        levelsIntro: "De l'amour inconditionnel à la manipulation.",
-        levels: { 1: "Amour inconditionnel : Prend soin de soi et des autres sans attente, humble.", 2: "Empathie : Attentionné, effusif, cherche à être proche.", 3: "Générosité : Donne concrètement, encourage, mais veut être apprécié.", 4: "Volonté de plaire : Devient indispensable pour s'assurer de l'amour, flatteur.", 5: "Possessivité : Intrusif, envahissant, fait tout pour l'autre 'pour son bien'.", 6: "Orgueil : Se plaint de tout ce qu'il fait, culpabilise les autres.", 7: "Manipulation : Utilise la pitié ou la maladie pour retenir l'attention.", 8: "Coercition : Exige de l'amour, sentiment de droit, colères hystériques.", 9: "Victimisation : S'effondre pour obliger les autres à le prendre en charge." },
+        levels: { 1: "Amour inconditionnel : Prend soin de soi et des autres sans attente, humble.", 2: "Empathie : Attentionné, effusif, cherche à être proche.", 3: "Générosité : Donne concrètement, encourage, mais veut être apprécié.", 4: "Volonté de plaire : Devient indispensable pour s'assurer de l'amour, flatteur.", 5: "Possessivité : Intrusif, envahissant, fait tout pour l'autre 'pour son bien'.", 6: "Orgueil : Se plaint de tout ce qu'il fait, culpabilise les autres.", 7: "Manipulation : Utilise la pitié ou la maladie pour retenir l'attention.", 8: "Coercition : Exige l'amour, sentiment de droit, colères hystériques.", 9: "Victimisation : S'effondre pour obliger les autres à le prendre en charge." },
         sections: [
           { t: "Présentation", b: "<p>Le Type 2 est tourné vers les autres. Chaleureux et démonstratif, il cherche à être aimé en se rendant indispensable.</p><ul><li><b>Désir fondamental :</b> Se sentir aimé et nécessaire.</li><li><b>Peur fondamentale :</b> Être indigne d'amour ou ne pas être désiré pour soi-même.</li><li><b>Message du Surmoi :</b> Tu es bien si tu es aimé et proche des autres.</li></ul>" },
           { t: "Structure et dynamique", b: "<ul><li><b>Centre :</b> Émotionnel (le cœur). L'énergie est dirigée vers l'extérieur (vers les autres).</li><li><b>Compulsion :</b> Éviter de reconnaître ses propres besoins.</li><li><b>Passion :</b> L'Orgueil (fierté d'aider sans avoir besoin d'aide).</li><li><b>Fixation :</b> Flatterie (complimenter pour séduire).</li><li><b>Mécanisme de défense :</b> Répression (refouler ses propres besoins).</li></ul>" },
@@ -336,7 +334,6 @@
       3: {
         title: "Type 3 – Le Battant",
         sub: "Le Réalisateur, l'Exécutant",
-        levelsIntro: "De l'authenticité à la monomanie destructrice.",
         levels: { 1: "Authenticité : Se valorise pour ce qu'il est, pas ce qu'il fait. Vrai.", 2: "Confiance : Compétent, adaptable, modèle de réussite.", 3: "Performance : Efficace, orienté objectifs, 'Star' du groupe.", 4: "Course au succès : Peur de l'échec, se vend, travaille trop.", 5: "Image : Souci des apparences, devient un 'caméléon', distance froide.", 6: "Narcissisme : Arrogance, compétition féroce, peur d'être démasqué.", 7: "Tromperie : Mensonge pour sauver la face, vide intérieur.", 8: "Opportunisme : Exploite les autres, trahit pour survivre.", 9: "Monomanie : Vindicatif, acharnement destructeur pour éliminer les témoins de l'échec." },
         sections: [
           { t: "Présentation", b: "<p>Le Type 3 est une personne orientée vers le succès, l'efficacité et l'adaptation. Il veut briller et être admiré pour ses réalisations.</p><ul><li><b>Désir fondamental :</b> Se sentir précieux, admiré et compétent.</li><li><b>Peur fondamentale :</b> L'échec et être sans valeur.</li><li><b>Message du Surmoi :</b> Tu es bien si tu réussis.</li></ul>" },
@@ -349,7 +346,6 @@
       4: {
         title: "Type 4 – L'Individualiste",
         sub: "Le Romantique, l'Artiste",
-        levelsIntro: "De l'inspiration créatrice au désespoir.",
         levels: { 1: "Inspiration : Crée à partir de l'universel, transforme la douleur en beauté.", 2: "Sensibilité : Introspectif, écoute ses émotions, raffiné.", 3: "Créativité : Exprime ses sentiments personnels, authentique.", 4: "Romantisme : Dramatise, s'attache à la mélancolie, se sent différent.", 5: "Repli : Timide, s'isole pour protéger ses sentiments, envieux.", 6: "Exception : Se sent exempté des règles, 'incompris', humeurs changeantes.", 7: "Aliénation : Déprimé, haine de soi, rejette ceux qui l'aiment.", 8: "Tourment : Angoisse émotionnelle, sabotage affectif.", 9: "Désespoir : Autodestruction pour échapper à la souffrance." },
         sections: [
           { t: "Présentation", b: "<p>Le Type 4 est sensible, introspectif et créatif. Il se sent différent et cherche à comprendre son identité profonde.</p><ul><li><b>Désir fondamental :</b> Être soi-même, unique et authentique.</li><li><b>Peur fondamentale :</b> N'avoir aucune identité ou être banal.</li><li><b>Message du Surmoi :</b> Tu es bien si tu es fidèle à tes sentiments.</li></ul>" },
@@ -362,7 +358,6 @@
       5: {
         title: "Type 5 – L’Observateur",
         sub: "L’Investigateur, le Penseur",
-        levelsIntro: "De la vision claire à l'autodestruction schizoïde.",
         levels: { 1: "Visionnaire : Perçoit la réalité avec une clarté exceptionnelle, participe au monde avec sagesse.", 2: "Perception : Observateur attentif, curieux, indépendant, absorbe l'information.", 3: "Expertise : Maîtrise des sujets complexes, innovant, partage ses découvertes.", 4: "Conceptualisation : Se prépare sans agir, vit dans sa tête, commence à se détacher.", 5: "Détachement : S'isole pour protéger son énergie, minimise ses besoins, devient secret.", 6: "Cynisme : Provocateur, vision noire de l'humanité, peur de l'envahissement.", 7: "Nihilisme : Coupe les ponts, excentrique, rejet de la réalité sociale.", 8: "Terreur : Paranoïa, hallucinations, fuite totale, peur d'être détruit.", 9: "Autodestruction : Annihilation du moi pour échapper à la douleur de l'existence." },
         sections: [
           { t: "Présentation", b: "<p>Le Type 5 a besoin de comprendre le monde pour s'y sentir en sécurité. Il observe depuis la périphérie pour protéger son autonomie.</p><ul><li><b>Désir fondamental :</b> Être compétent et capable.</li><li><b>Peur fondamentale :</b> Être inutile, incapable ou envahi.</li><li><b>Message du Surmoi :</b> Tu es bien si tu as maîtrisé quelque chose.</li></ul>" },
@@ -375,7 +370,6 @@
       6: {
         title: "Type 6 – Le Loyaliste",
         sub: "Le Gardien, le Sceptique",
-        levelsIntro: "Du courage à l'autodestruction paranoïaque.",
         levels: { 1: "Courage : Guidé par sa propre autorité intérieure, confiant, serein.", 2: "Engagement : Fiable, crée des liens solides, protecteur.", 3: "Loyauté : Dévoué au groupe, responsable, travailleur.", 4: "Doute : Vigilant, anticipe les problèmes, besoin de règles.", 5: "Ambivalence : Méfiant, teste les autres, pessimiste, défensif.", 6: "Réactivité : Autoritaire ou soumis, blâme les autres, divise.", 7: "Panique : Cherche un sauveur, dépendance, insécurité totale.", 8: "Paranoïa : Se sent persécuté, attaque pour se défendre.", 9: "Autodestruction : S'abandonne ou se punit pour apaiser l'angoisse." },
         sections: [
           { t: "Présentation", b: "<p>Le Type 6 est vigilant et engagé. Il cherche la sécurité et le soutien, anticipant souvent les dangers potentiels.</p><ul><li><b>Désir fondamental :</b> Avoir de la sécurité et du soutien.</li><li><b>Peur fondamentale :</b> Être sans soutien, seul ou sans guidance.</li><li><b>Message du Surmoi :</b> Tu es bien si tu fais ce qu'on attend de toi.</li></ul>" },
@@ -388,7 +382,6 @@
       7: {
         title: "Type 7 – L'Épicurien",
         sub: "L'Enthousiaste, le Généraliste",
-        levelsIntro: "De la gratitude à la paralysie paniquée.",
         levels: { 1: "Gratitude : S'émerveille de l'instant présent, joyeux, complet.", 2: "Enthousiasme : Spontané, vif, productif, animant.", 3: "Accomplissement : Polyvalent, lance des projets, pragmatique.", 4: "Consommation : Veut plus, peur de manquer, hyperactif.", 5: "Distraction : Fuit l'ennui, superficiel, parle beaucoup.", 6: "Excès : Égoïste, exigeant, insatisfait, impulsif.", 7: "Fuite : Irresponsable, infantilisme, dépendances.", 8: "Manie : Frénésie, panique, ne contrôle plus ses impulsions.", 9: "Paralysie : Bloqué par la peur, effondrement." },
         sections: [
           { t: "Présentation", b: "<p>Le Type 7 est spontané, optimiste et polyvalent. Il cherche le bonheur et la variété pour éviter la souffrance.</p><ul><li><b>Désir fondamental :</b> Être heureux et satisfait.</li><li><b>Peur fondamentale :</b> Être privé, enfermé ou souffrir.</li><li><b>Message du Surmoi :</b> Tu es bien si tu es heureux.</li></ul>" },
@@ -401,11 +394,10 @@
       8: {
         title: "Type 8 – Le Leader",
         sub: "Le Challenger, le Protecteur",
-        levelsIntro: "De la magnanimité à la destruction.",
         levels: { 1: "Magnanimité : Utilise sa force pour le bien, héroïque, indulgent.", 2: "Assurance : Confiant, direct, prend les choses en main.", 3: "Leadership : Constructif, protège son équipe, action.", 4: "Pragmatisme : Négociateur, aime le risque, cache ses sentiments.", 5: "Domination : Veut contrôler, fanfaron, impose sa volonté.", 6: "Intimidation : Menace, belligérant, crée le conflit.", 7: "Dictature : Impitoyable, immoral, écrase les autres.", 8: "Mégalomanie : Illusion de toute-puissance, terreur.", 9: "Destruction : Détruit tout avant d'être vaincu, sociopathie." },
         sections: [
           { t: "Présentation", b: "<p>Le Type 8 est puissant et dominant. Il veut contrôler sa vie et son destin, et protéger ceux qui sont sous sa responsabilité.</p><ul><li><b>Désir fondamental :</b> Se protéger et décider pour soi-même.</li><li><b>Peur fondamentale :</b> Être blessé, contrôlé ou manipulé.</li><li><b>Message du Surmoi :</b> Tu es bien si tu es fort et en contrôle.</li></ul>" },
-          { t: "Structure et dynamique", b: "<ul><li><b>Centre :</b> Instinctif. Énergie dirigée vers l'extérieur pour impacter le monde.</li><li><b>Compulsion :</b> Éviter la faiblesse.</li><li><b>Passion :</b> L'Excès (ou Luxure) : besoin d'intensité et d'expansion.</li><li><b>Fixation :</b> Vengeance (rétablir la justice à sa manière).</li><li><b>Mécanisme de défense :</b> Déni (de sa propre vulnérabilité).</li></ul>" },
+          { t: "Structure et dynamique", b: "<ul><li><b>Centre :</b> Instinctif (Extérieur).</li><li><b>Compulsion :</b> Éviter la faiblesse.</li><li><b>Passion :</b> L'Excès (ou Luxure) : besoin d'intensité et d'expansion.</li><li><b>Fixation :</b> Vengeance (rétablir la justice à sa manière).</li><li><b>Mécanisme de défense :</b> Déni (de sa propre vulnérabilité).</li></ul>" },
           { t: "Sous-types instinctifs", b: "<ul><li><b>Auto-conservation (Satisfaction) :</b> Le Survivant. Accumule des ressources, territorial, ne compte que sur soi.</li><li><b>Social (Solidarité) :</b> Le Protecteur. Loyal à son groupe, contre l'injustice sociale.</li><li><b>Tête-à-tête (Possession) :</b> Rebelle, intense, veut posséder totalement l'attention de l'autre.</li></ul>" },
           { t: "Dynamique des flèches", b: "<ul><li><b>Sous Stress (→ 5) :</b> Se retire, devient froid, cynique, observe de loin pour stratégiser.</li><li><b>En Croissance (→ 2) :</b> Ouvre son cœur, devient tendre, protecteur bienveillant, admet ses besoins.</li></ul>" },
           { t: "Pistes d'évolution", b: "<p>Le défi du 8 est d'accepter sa <b>vulnérabilité</b> comme une force.</p><ul><li>Apprendre à attendre avant de réagir.</li><li>Reconnaître l'impact de sa force sur les autres.</li><li>Laisser les autres prendre les commandes parfois.</li></ul>" }
@@ -414,7 +406,6 @@
       9: {
         title: "Type 9 – Le Médiateur",
         sub: "Le Pacificateur, le Conciliateur",
-        levelsIntro: "De la présence indomptable à l'abandon de soi.",
         levels: { 1: "Présence : Indomptable, serein, connecté à soi et aux autres.", 2: "Réceptivité : Calme, écoute, accepte, stable.", 3: "Soutien : Médiateur naturel, réconfortant, unifie.", 4: "Effacement : Dit oui pour ne pas faire de vagues, routine.", 5: "Désengagement : Passif, repousse les problèmes, têtu.", 6: "Résignation : Fataliste, minimise tout, 'ça va aller'.", 7: "Négligence : Refoule, inefficace, dépendant.", 8: "Dissociation : Se coupe de la réalité, vit dans un brouillard.", 9: "Disparition : Catatonie, inexistence, fragmentation." },
         sections: [
           { t: "Présentation", b: "<p>Le Type 9 cherche la paix et l'harmonie. Il est acceptant, rassurant et évite le conflit pour maintenir sa tranquillité.</p><ul><li><b>Désir fondamental :</b> La paix intérieure et la stabilité.</li><li><b>Peur fondamentale :</b> Le conflit, la fragmentation, la séparation.</li><li><b>Message du Surmoi :</b> Tu es bien si tout le monde est bien.</li></ul>" },
